fixes + nahitar religion mechanic

--- a/localisation/TD_01_flavour_capira_l_english.yml
+++ b/localisation/TD_01_flavour_capira_l_english.yml
@@ -71,4 +71,4 @@
 ## Actions
  vassalize_compagne_title:0 "Vassalize Compagne"
  vassalize_compagne_desc:0 "We will vassalize our league member"
- vassalize_compagne_tooltip:0 "We will vassalize this nation and recieve a -1 diplomatic reputation modifier. We can do this action every 5 years"
+ vassalize_compagne_tooltip:0 "We will vassalize this nation and receive a -1 diplomatic reputation modifier. We can do this action every 5 years"
