--- a/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
+++ b/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
@@ -108,7 +108,7 @@
  td_ehren_saelianism.3.a:0 "Abolish them!"
  td_ehren_saelianism.3.b:0 "Allow them to continue"
 
- ehren_saelianism_events_nifthem_discrimination_tt:0 "There is a 25% chance for every Nifthemian, Sigilian province to recieve a modifier that gives local unrest and boosts local missionary strength"
+ ehren_saelianism_events_nifthem_discrimination_tt:0 "There is a 25% chance for every Nifthemian, Sigilian province to receive a modifier that gives local unrest and boosts local missionary strength"
  ehren_saelianism_nifthem_sigilian_discrimination:0 "Discrimination Zone"
  desc_ehren_saelianism_nifthem_sigilian_discrimination:0 "Local Ehren Saelian followers decided to isolate themselves from Sigilian communities."
 
@@ -152,7 +152,7 @@
 
  td_ehren_saelianism.9.a:0 "Unite them all"
  td_ehren_saelianism.9.b:0 "Allow them to exist"
- ehren_saelianism_events_authority_local_structure.tt:0 "Every province will get a 50% chance that it will recieve a local modifier."
+ ehren_saelianism_events_authority_local_structure.tt:0 "Every province will get a 50% chance that it will receive a local modifier."
  ehren_saelianism_authority_centralised:0 "Countrywide Organisation"
  desc_ehren_saelianism_authority_centralised:0 "We united all local organisations under this"
  ehren_saelianism_authority_decentralised:0 "Local Organisation"
