--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -108,7 +108,7 @@
  td_ehrenstaat.5.a:0 "Send the proposition"
  td_ehrenstaat.5.b:0 "Carry on"
 
- EHR_randwerpen_proposition:0 "We will send Randwerpen a peace offer where they get all of our lands and subjects in Nifthem, if they accept we will recieve a trade boost in their trade node and 100 ducats."
+ EHR_randwerpen_proposition:0 "We will send Randwerpen a peace offer where they get all of our lands and subjects in Nifthem, if they accept we will receive a trade boost in their trade node and 100 ducats."
  EHR_war_effort_reorganisation:0 "War Effort Reorganisation"
 
  td_ehrenstaat.6.t:0 "Proposition Accepted"
@@ -127,7 +127,7 @@
  wg_war_for_nifthem:0 "War For Nifthem"
  wg_war_for_nifthem_desc:0 "Wargoal is to show our supremacy by winning battles."
  PEACE_po_ehrenstaat_victorious:0 "Conquer Nifthem"
- po_ehrenstaat_victorious_desc:0 "We will recieve an event to decide about their fate"
+ po_ehrenstaat_victorious_desc:0 "We will receive an event to decide about their fate"
  PEACE_po_randwerpen_victorious:0 "Banish Ehrenstaat"
  po_randwerpen_victorious_desc:0 "We will take lands that Ehrenstaat hold directly and get an event to decide about fate of their Nifthemi puppets"
  WAR_FOR_NIFTHEM_WN:0 "War For Nifthem"
