--- a/localisation/TD_01_flavour_merhaan_l_english.yml
+++ b/localisation/TD_01_flavour_merhaan_l_english.yml
@@ -12,7 +12,7 @@
  merhaan_shaman_influx:0 "Shaman Influx"
 
  merhaan.3.t:0 "Ovogstegian Proclamation"
- merhaan.3.desc:0 "New faith of Ovogsteg was proclaimed. Now shamans are ready to assimilate different sects into our new church, many shamans from different areas are interested in our new creation and decided to migrate here but it will take some time. Let the new age of Merhaan belief start!\n\nNow you will have 50 years to have at least 3 harmonized religions. If you don't do it in 50 years you will recieve a debuff and will need to harmonize all merhaan faiths.\n During this time you will recieve a massive debuff when trying to harmonize other religious groups and recieve events about shamans from different sects come here. Good Luck"
+ merhaan.3.desc:0 "New faith of Ovogsteg was proclaimed. Now shamans are ready to assimilate different sects into our new church, many shamans from different areas are interested in our new creation and decided to migrate here but it will take some time. Let the new age of Merhaan belief start!\n\nNow you will have 50 years to have at least 3 harmonized religions. If you don't do it in 50 years you will receive a debuff and will need to harmonize all merhaan faiths.\n During this time you will receive a massive debuff when trying to harmonize other religious groups and receive events about shamans from different sects come here. Good Luck"
  merhaan.3.a:0 "I Understand"
  merhaan_starting_enthusiasm:0 "Starting Enthusiasm"
 
