--- a/localisation/TD_01_flavour_silberhafen_l_english.yml
+++ b/localisation/TD_01_flavour_silberhafen_l_english.yml
@@ -16,7 +16,7 @@
  silberhafen_ehren_shipbuilding_desc:0 "As a nation that was created by Ehren immigrants we still possess some of their naval prowess, and techniques. Because of it our production of ships can be cheaper than normal. We can't match Ehren numbers of ships but we can at least make them cheaply."
 
  silberhafen_foreign_legions:0 "Foreign Legions"
- silberhafen_foreign_legions_desc:0 "Size of Ehren population in our lands makes fielding armies much harder, even after integration of local cultures problems of manpower shortages appeared. We couldn't have as much troops as other countries on the field. This changed after foreign legions were created, a lot of people from outside the isles started to volunteer to them, joining them gives lessons of Ehren culture and languages to outsiders. Later people that did their duty of fighting for us can retire and recieve citizenship."
+ silberhafen_foreign_legions_desc:0 "Size of Ehren population in our lands makes fielding armies much harder, even after integration of local cultures problems of manpower shortages appeared. We couldn't have as much troops as other countries on the field. This changed after foreign legions were created, a lot of people from outside the isles started to volunteer to them, joining them gives lessons of Ehren culture and languages to outsiders. Later people that did their duty of fighting for us can retire and receive citizenship."
 
  silberhafen_mandated_help:0 "Mandated Help"
  silberhafen_mandated_help_desc:0 "Caring about our citizens was one of the things that allowed Silverhafen to survive against rival trade cities. Government helps by expanding local businesses and creating new ones. Benefits of this action stopped being that much useful to citizens because of scale but because of that we always people ready to construct or start new ventures."
@@ -42,7 +42,7 @@
  desc_ZIL_peaceful_times:0 "todo"
 
  td_silberhafen.2.t:0 "Our Proposal"
- td_silberhafen.2.desc:0 "Alliance with one of the argenian brothers will allow us to establish our diplomatic ties on the isles and help us in conquest of new lands. We decided to send to a northern argenian state. We will ally with them, we will help them conquer another nation and in return we will recieve some lands from them."
+ td_silberhafen.2.desc:0 "Alliance with one of the argenian brothers will allow us to establish our diplomatic ties on the isles and help us in conquest of new lands. We decided to send to a northern argenian state. We will ally with them, we will help them conquer another nation and in return we will receive some lands from them."
  td_silberhafen.2.a:0 "Send it"
 
  td_silberhafen.3.t:0 "Silberian Proposal"
