--- a/localisation/TD_03_missions_silberhafen_l_english.yml
+++ b/localisation/TD_03_missions_silberhafen_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  ZIL_new_laws_title:0 "New Laws"
  ZIL_new_laws_desc:0 ""
- td_silberhafen.7_tt:0 "We will be able to get Argenian culture accepted or recieve diplomatic power if we already accept them."
+ td_silberhafen.7_tt:0 "We will be able to get Argenian culture accepted or receive diplomatic power if we already accept them."
 
  ZIL_proclamation_of_equality_title:0 "Proclamation of Equality"
  ZIL_proclamation_of_equality_desc:0 ""
