--- a/localisation/messages_l_english.yml
+++ b/localisation/messages_l_english.yml
@@ -7026,7 +7026,7 @@
  RECEIVED_FLEEING_SERFS_BTN1:0 "OK"
  RECEIVED_FLEEING_SERFS_BTN2:0 "OK"
  RECEIVED_FLEEING_SERFS_BTN3:0 "Go to"
- fleeing_serfs_tt:0 "One of our bordering provinces will recieve §G1§! random Development"
+ fleeing_serfs_tt:0 "One of our bordering provinces will receive §G1§! random Development"
  SERFS_FLED_TITLE:0 "Serfs fleeing to $TO$!"
  SERFS_FLED_SETUP:0 "When dissatisfied serfs flee our country"
  SERFS_FLED_HEADER:0 "$MESSENGER$"
