--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -844,3 +844,8 @@
  sibsakha_area:0 "Sibsakha"
  sarakhant_area:0 "Sarakhan"
  outer_niheyan_ocean_area:0 "Outer Niheyan Ocean"
+ pamaiti_area:0 "Pamaiti"
+ fangale_area:0 "Fangale"
+ thangphan_area:0 "Thangphan"
+ siviav_area:0 "Siviav"
+ phuhuk_area:0 "Phuhuk"
