--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -475,7 +475,7 @@
  koinama:0 "Koinama"
  nilutapa:0 "Nilutapa"
 
- pantaki_group:0 "Pantaki"
+ pankati_group:0 "Pankati"
  rambutako:0 "Rambutako"
  likuruma:0 "Likuruma"
  burikat:0 "Burikat"
