--- a/localisation/TD_01_Flavour_Pamkusea_l_english.yml
+++ b/localisation/TD_01_Flavour_Pamkusea_l_english.yml
@@ -124,3 +124,21 @@
  apaxtaros_zakarturi_frontier_desc:0 "Northern lands of Zakarturia is where the remnants of Pamkusean states and staunch mountainous kingdoms clash for domination and living space. Their instability grants us a perfect opportunity to strike and enrich our empire even more."
  apaxtaros_new_days_of_pamkusea:0 "New Days of Pamkusea"
  apaxtaros_new_days_of_pamkusea_desc:0 "The new age has finally came - Pamkusea is united under someone who respects their tradition and their culture. What comes forward is a period in which we will show the world our strength and splendor, with an army capable of withstanding forces thousands times stronger, fleet burning anyone even daring to come close, and economy providing the great powers with luxury."
+
+ zumnaseth_ideas:0 "Zumnasethian Ideas"
+ zumnaseth_ideas_bonus:0 "Zumnasethian Ambition"
+ zumnaseth_ideas_start:0 "Zumnasethian Traditions"
+ zumnaseth_gmakmuwah:0 "Gmakmuwah"
+ zumnaseth_gmakmuwah_desc:0 "The tradition of waging holy wars is a tradition passed down since the times of the great Yatunian Empire. Then it was a method of survival of the true faith, but now it's a righteous cause to show the people a true way."
+ zumnaseth_gisian_grain:0 "Gisian Grain"
+ zumnaseth_gisian_grain_desc:0 "The fertile watershed of Kidinare provides food to a variety different peoples, many of which live deep in Zakarturi mountains or across the Panourgian sea. Both Eneratian and Zakarturi wanted to dominate the food production in the region. Controlling a granary of these great fallen nations will surely show our strength and place us amongst the great powers."
+ zumnaseth_legacy_of_peroz:0 "Perozian Legacy"
+ zumnaseth_legacy_of_peroz_desc:0 "Peroz was the third of the fourth great rulers of Zumnaseth, mostly known for his unrelenting faith and unbroken warrior's spirit. He was the one to formalize our customs as dominant in the region, often threatening his own villages with raids in order to spread his vision."
+ zumnaseth_merchant_rights:0 "Merchant Rights"
+ zumnaseth_merchant_rights_desc:0 "One way to control the unrest among our pamkusean speaking population was to appease the upper strata which is mostly compromised of merchants and burghers. Granting them extensive political rights will not only increase our stability, but also improve our reach and grasp over the entire Panourgian sea."
+ zumnaseth_awahan_kastopsil:0 "Awahan Kastopsil"
+ zumnaseth_awahan_kastopsil_desc:0 "The ancient fortress near the city of Kastopsil often saved the pamkusean peninsula people from anihilation. It stopped a Zakarturi invasion near the first century and more recently saved us from the threat of bunelisuli subjugation. This undefeatable fortress will protect us for centuries to come."
+ zumnaseth_southern_courts:0 "Southern Courts"
+ zumnaseth_southern_courts_desc:0 "Varazan conquest have scattered our people far away from their homes, but despite being so far north, our nation mainstain stable relations with our bretherens back in the homeland."
+ zumnaseth_divine_right:0 "Divine Right"
+ zumnaseth_divine_right_desc:0 "Gisia is filled with many different heathens scrambling for any resemblence power in the region. Zakarturi try to maintain the old order, eneratians crumble under external pressure and hordes lose their identity due to heavy syncretism. Only our religion is truly righteous and justified to unite these people under one faith."
