releasables + 3 new gov reforms + setup changes

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -505,3 +505,14 @@
  po_force_imperial_prince_desc:0 "Force them to become an imperial prince under us."
  CB_ALLOWED_po_force_imperial_prince:0 "Force into submission"
  PEACE_po_force_imperial_prince:0 "Force into submission"
+
+
+ subordinate_clergy_reform:0 "Subordinate Clergy"
+ subordinate_clergy_reform_desc:0 "Clergy in our nation is largely dependant on the decisions of the Vicarus."
+ expanded_inquisition_reform:0 "Expanded Inquisition"
+ expanded_inquisition_reform_desc:0 "The recently revived imperial inqusition has been given a free hand in dealing with religious matters in our nation."
+ strengthen_the_legatorum_reform:0 "Strengthen the Legatorum"
+ strengthen_the_legatorum_reform_desc:0 "Appointing imperial legates in high government seats will bring us closer to the empire and allow to merge diplomatic and administrative divisions."
+ mechanic_better_foreign_archbishop_yes:0 "Inviting Foreign Archbishop costs no diplomatic power and provides a better advisor."
+ mechanic_block_synods_yes:0 "Can NOT promote synods."
+ block_synods_tt:0 "Promoting Synods is NOT blocked."
