--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -373,7 +373,7 @@
  upper_oyria_area:0 "Upper Oyria"
  rakabani_highlands_area:0 "Rakabani Highlands"
 
- barahan_area:0 "Barahan"
+ barhan_area:0 "Barhan"
  dakhal_area:0 "Dakhal"
  sawdagun_area:0 "Sawdagun"
  samadar_area:0 "Samadar"
