--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1271,3 +1271,12 @@
  DIC_ADJ:0 "Dieu Chau"
  VAH:0 "Van Hai"
  VAH_ADJ:0 "Van Hai"
+
+ SGR:0 "Šagrabr"
+ SGR_ADJ:0 "Šagrabrian"
+ GAA:0 "Garamarz"
+ GAA_ADJ:0 "Garamarzian"
+ BAH:0 "Bahramodšahr"
+ BAH_ADJ:0 "Bahramodšahri"
+ BAA:0 "Bahran"
+ BAA_ADJ:0 "Bahrian"
