--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -133,3 +133,21 @@
  estate_burghers_fra_autonomous_fleets_desc:0 "Despite officialy being under ownership of the great Nusabat, trade fleets of Fravasum are mostly controlled by merchant elites."
  fra_navy_reconstruction:0 "Navy Reconstruction"
  desc_fra_navy_reconstruction:0 "It will take some time and effort to centralize our naval operations."
+
+ raxasam_group_ideas:0 "Raxasam Minor Ideas"
+ raxasam_group_ideas_bonus:0 "Raxasam Minor Ambition"
+ raxasam_group_ideas_start:0 "Raxasam Minor Traditions"
+ raxasam_town_guards:0 "Town Guards"
+ raxasam_town_guards_desc:0 "The cities of Raxasa are the most vital to our economy, and so it became a common practice to train village folk as guardsmen, so that we don't deplete vital city population and grant the commoners a chance to protect their nation."
+ raxasam_supreme_clothing:0 "Supreme Clothing"
+ raxasam_supreme_clothing_desc:0 "Cities surrounding the Anjafrah are often collectively referred to as 'the silk cities' due to the high quality clothing produced there. They are sought after commodities, even in distant lands such as Taedium or Maisetra"
+ raxasam_sunbat_enterprise:0 "Sunbat Enterprise"
+ raxasam_sunbat_enterprise_desc:0 "Goods from the steppe and the far east often come through north dominated by the hestani folk. Thankfully, many of our towns have their sister cities in the Sunbat coast to much more effectively trade and not interfere with each other."
+ raxasam_uniting_the_cities:0 "Uniting the Cities"
+ raxasam_uniting_the_cities_desc:0 "At multiple points in history, the cities tried to unite under one banner, but not necesarilly militarily. Most of those attempts were trade unions, confederations and alliances, but to survive we need to have a one state."
+ raxasam_advanced_shipmaking:0 "Advanced Shipmaking"
+ raxasam_advanced_shipmaking_desc:0 "Abundance of timber naturally helped us to effectively develop and construct trade vessels, which was further expanded by the coastal nature of our settlements and high economic activity around the hestani sea."
+ raxasam_qawartian_colonization:0 "Qawartian Colonizations"
+ raxasam_qawartian_colonization_desc:0 "Many of Raxasam people leave their densely populated homeland in order to settle in newly build settlements in Qawartian and Aroshasi peninsulas, which are sparsely populated despite their potential."
+ raxasam_ending_auruvatan_domination:0 "Ending Auruvatan Domination"
+ raxasam_ending_auruvatan_domination_desc:0 "Auruvata has been a threat to our people for far too long. Conquering the great cities of Bahramodšahr and Mexagam, they destroyed a delicate balance of power in the region, causing Frasatah to also increase their power. We must take the destiny in our own hands and show them what we are capable of."
