--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -1,8 +1,10 @@
 ﻿l_english:
 
  TD_piety_supremacy_of_synod:0 "Supremacy of the Synod"
+ desc_TD_piety_supremacy_of_synod:0 "Synods are encouraged and supported by the state."
  TD_piety_supremacy_of_synod_tooltip:0 "Promote Synods"
  TD_piety_foreign_archbishop:0 "Foreign Archbishop"
+ desc_TD_piety_foreign_archbishop:0 "An imperial archbishop is currently holding a position in our government."
  TD_piety_foreign_archbishop_tooltip:0 "Invite Foreign Archbishop"
 
  emperor_call_for_reform_title:0 "Call for Reform"
@@ -60,6 +62,7 @@
  investigate_heresy_title:0 "Investigate Heresy"
  investigate_heresy_tooltip:0 "Investigate heresy in their court, demanding them to return to true ways."
  investigate_heresy_desc:0 "We will demand them to abandon their heresy. If they accept they will convert to our faith and gain §Y100§! Imperial Allegiance. If they decline, we will get §Yholy war§! casus belli against them."
+ investigate_heresy_dialog:0 "[emperor.GetName] wants to investigate us for heresy. If we accept we will convert to our faith and they willgain §Y100§! Imperial Allegiance. If we decline, they will get §Yholy war§! casus belli against us."
  HAS_REFORMATION_CENTER:0 "Has at least 1 reformation center"
 
  emperor_establish_proper_bureaucracy_title:0 "Establish Proper Bureaucracy"
@@ -302,14 +305,19 @@
  de_seliana_legacy_of_saelius:0 "Legacy of Saelius"
  desc_de_seliana_legacy_of_saelius:0 "[Root.Monarch.GetName] sees himself as a descendant of Imperator Vicarius Saelius."
 
+ saelian.13.t:0 "The Decay of Imperium Saelianium"
+ saelian.13.desc:0 "In the 1444th year since the Saelius walked into the city of Capira and established the eternal Saelian Empire - but his realm is now weaker than ever before. Centuries of external raids and barbaric conquests were only a fraction of the issues that were troubling the empire throughout all of its history. For most of the time, the emperor and the tetrarchy stood together in the name of preserving the empire, but long lines of weak and easily manipulated emperors lead to the tetrarchy not only gaining vast amounts of lands but also diploamtic control over the empire and the continent. It is fairly obvious that their only goal is to further the personal goals instead of securing the existence of the state and religion that provides for them."
+ saelian.13.a:0 "May God save our Empire."
+ TD_imperial_power_struggle:0 "Imperial Power Struggle"
+ saelian.13.a_tt:0 "This opinion modifier will be inherited by new emperors."
+ imperial_reconcillation_decision_title:0 "Imperial Reconcillation"
+ imperial_reconcillation_decision_desc:0 "For too long has our great empire live through a constant fight of the emperor and the tetrarchy. Our realm grows weaker year by year and internal conflict will only bring its doom closer to realization."
+
  TETRARCHATE:0 "Tetrarchate"
  TETRARCH:0 "Tetrarch"
  council_of_tetrarchs_reform:0 "Council of Tetrarchs"
  council_of_tetrarchs_reform_desc:0 "After abolishing the idea of elected Emperor, the tetrarchs seized control over the Saelian Empire."
 
-<<<<<<< Updated upstream
- ONLY_SIGILIAN:0 "£no£ Only Sigilian nations can join the Empire."
-=======
  ONLY_SIGILIAN:0 "£no£ Only Sigilian nations can join the Empire."
  SIGILIAN_HIGH_PIETY:0 "£no£ Your Imperial Allegiance needs to be above 50 to join the Saelian Empire."
  SIGILIAN_LOW_PIETY:0 "£no£ Your Imperial Allegiance needs to be below -25 to leave the Saelian Empire."
@@ -752,4 +760,3 @@
  
  TD_All_In_Empire_Get_tt:0 "§YAll in the Empire get:§!"
  TD_Empire_Provinces_Get_tt:0 "§YEmpire provinces get:§!"
->>>>>>> Stashed changes
