--- a/localisation/TD_01_flavour_gyrdia_l_english.yml
+++ b/localisation/TD_01_flavour_gyrdia_l_english.yml
@@ -39,3 +39,21 @@
  gyrdia_new_industries_desc:0 "In order to maintain an economic stability and growth, we have to diversify the production in our nation. In the XVI and XVII centuries our rulers invested into urban spaces to increase the production of jewelry, glass, paper, clothes and processing of metals. This also led to us gaining a place on the world stage, bestowing us great prestige."
  gyrdia_oversea_empire:0 "Oversea Empire"
  gyrdia_oversea_empire_desc:0 "Our ventures into Chantlia were started by our ambitious noblemen, who wanted to establish colonies following the success of other great powers in the new world. We not only wanted to spread our influence in these lands, but also maintain a stable trade relations with local nations and other colonizers, often serving as the middlemen."
+
+ nordmark_ideas:0 "Nordmarker Ideas"
+ nordmark_ideas_bonus:0 "Nordmarker Ambition"
+ nordmark_ideas_start:0 "Nordmarker Traditions"
+ nordmark_gyrdian_assimilation:0 "Gyrdian Assimilation"
+ nordmark_gyrdian_assimilation_desc:0 "Thanks to good tolerance towards the local population of Gyrdia, many of them integrated into our silvestrine society, speaking our language in public space while being allowed to cultivate their culture at home."
+ nordmark_naval_competition:0 "Naval Competition"
+ nordmark_naval_competition_desc:0 "Due to the many great powers fighting for power in the north in the naval arms race, we also had to develop and construct our oceanic fleet to be able to compete against these countries with much longer naval tradition than us."
+ nordmark_modern_border_control:0 "Modern Border Control"
+ nordmark_modern_border_control_desc:0 "Historically, people used Gyrdia as a way to bypass high imperial tolls to nifthem. We can largely benefit from this thanks to the implementation of modern network of fortifications. Border with nifthem and the empire is well guarded in order to ensure that no enemy manages to infiltrate our nation or avoids taxation."
+ nordmark_harsh_drill:0 "Harsh Drill"
+ nordmark_harsh_drill_desc:0 "The foundation of XVIII century military lies in extreme discipline which is able to withstand not only cavalry charge, but also artillery barrage. By training our men in the harshest ways, we make sure that whatever hell they experience in the battlefield is merely a fraction of pain of the training."
+ nordmark_swamp_draining:0 "Swamp Draining"
+ nordmark_swamp_draining_desc:0 "While draining swamps is a risky maneuver which can lead to unstable building grounds, our engineering and gyrdian expertise allowed us to effectively make moors and bogs suitable for agriculture and settlement."
+ nordmark_new_world_banking:0 "New World Banking"
+ nordmark_new_world_banking_desc:0 "Our economy is often set as an example of profiteering with high risk. Many tried to embark on journeys to the wild west, but we were the ones to fund their ventures through giving out seemingly generous loans."
+ nordmark_rulers_of_the_north:0 "Rulers of the North"
+ nordmark_rulers_of_the_north_desc:0 "Wide and cold north was often dominated by seaborne nations which influenced others through trade and diplomacy. In our case, the success came from disciplined military and careful planning of our future moves, which is what many of our rivals lack."
