--- a/localisation/TD_01_flavour_nifthem_l_english.yml
+++ b/localisation/TD_01_flavour_nifthem_l_english.yml
@@ -69,7 +69,7 @@
 
  minor_nifthemi_ideas:0 "Nifthemi Minor Ideas"
  minor_nifthemi_ideas_start:0 "Nifthemi Minor Traditions"
- minor_nifthemi_ideas_bonus:0 "Nifthemi Minor Ideas"
+ minor_nifthemi_ideas_bonus:0 "Nifthemi Minor Ambition"
 
  minor_nifthemi_war_is_business:0 "War is Business"
  minor_nifthemi_war_is_business_desc:0 "Our wealth will allow us to encourage mercenaries to join our forces. It should allow us to boost our numbers to gain necessary advantage."
@@ -94,8 +94,9 @@
  
 ## united nifthem
 
+ united_nifthemi_ideas_start:0 "Nifthemi Traditions"
  united_nifthemi_ideas:0 "Nifthemi Ideas"
- united_nifthemi_ideas_bonus:0 "Nifthemi Ideas"
+ united_nifthemi_ideas_bonus:0 "Nifthemi Ambitions"
 
  united_nifthemi_national_unity:0 "National Unity"
  united_nifthemi_national_unity_desc:0 "Our population gone through a lot making it more united than ever."
