--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -143,3 +143,8 @@
  dorchia_open_sea_whaling_desc:0 "Dangerous western seas may seem barren at first, but they hold large population of whales, which are the sources of many sought after commodities such as oils, their meat and ambergris."
  dorchia_dalvian_currents:0 "Dalvian Currents"
  dorchia_dalvian_currents_desc:0 "Winds in the Dalvian waters always blow west. This means that any lost sailor will never see his home again, but there is also some positive aspects to this phenomenon - we can relatively quickly travel to the new world."
+
+ prices.101.t:0 "Popularization of Dorchean Goods"
+ prices.101.desc:0 "The increasing exploitation of the seas by the dorcheans and flooding of the continental market has made them addicted to various fish-related products which also include whale oil and meat, ivory, and ambergris. People yearn for the dorchean goods and are willing to pay high prices to get them."
+ prices.101.a:0 "Splendid!"
+ BHAITHAR_GP_FISH:0 "Continental Fish Craze"
