--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -125,3 +125,6 @@
  
  ancient_merhaan_site:0 "Place of Merhaan"
  ancient_merhaan_site_desc:0 "According to all shamans of Merhaan, old tree that gave life to all humans was here. In these times it works as a spiritual capital for all people of Merhaan faith."
+
+ bhaithar_castle:0 "Bhaithar Castle"
+ bhaithar_castle_desc:0 "While not particularly interesting, the city surrounding the castle is a bustling center of Dorchean isles influencing not only the region, but the whole north."
