--- a/localisation/TD_01_flavour_marstonia_l_english.yml
+++ b/localisation/TD_01_flavour_marstonia_l_english.yml
@@ -14,6 +14,7 @@
  estate_burghers_MEZ_foreign_traders:0 "Foreign Traders"
  estate_burghers_MEZ_foreign_traders_desc:0 "Most of merchants in Mezonia are of foreign origin - most commonly Wedlan and Ostemer"
  MEZ_banished_foreign_traders:0 "Foreign Traders Banished"
+ desc_MEZ_banished_foreign_traders:0 "Most western merchants have been prohibited from trading within our lands or with our people."
 
 
 
