--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -849,3 +849,9 @@
  thangphan_area:0 "Thangphan"
  siviav_area:0 "Siviav"
  phuhuk_area:0 "Phuhuk"
+
+ nteviav_area:0 "Nteviav"
+ nasrupatyaka_area:0 "Nasrupatyaka"
+ haluda_phara_area:0 "Haluda Phara"
+ jampyari_area:0 "Jampyari"
+ putnala_area:0 "Putnala"
