--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -3374,6 +3374,7 @@
  librium_veto:0 "Liberum Veto"
  revolutionary_republic:0 "Revolutionary Republic"
  revolutionary_republic_ruler:0 "Consul"
+ revolutionary_empire_reform:0 "Revolutionary Empire"
  revolutionary_empire:0 "Revolutionary Empire"
  revolutionary_empire_ruler:0 "Emperor"
  FE_RULER:0 "Ruler"
