icons and fixes

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -325,7 +325,8 @@
  emperor_allowed_war:0 "Emperor allowed pacification"
  desc_emperor_allowed_war:0 "The Tetrarchy has given the emperor right to punish their unruly subjects."
  elector_graceful_enough:0 "The tetrarchs are already graceful enough."
-
+ emperor_disallowed_war:0 "Emperor Disallowed Pacification"
+ desc_emperor_disallowed_war:0 "The emperor has been forbidden from attacking his subjects."
  
  Hold_Diet:0 "Hold the Diet"
  TD_Imperial_Decree5_tooltip:0 "Gather the Imperial Diet in order to increase your imperial authority - at a cost..."
