Disaster Minor changes and fixes
Also fixed mercenary companies triggers

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -527,7 +527,8 @@
  disaster_internal_decay_of_second_empire:0 "Internal Decay of Second Empire"
  disaster_sis_decay.1.t:0 "Internal Decay of Second Empire Begins"
  disaster_sis_decay.1.desc:0 " "
- disaster_sis_decay.1.a:0 "§RMay god have mercy on us§!"
+ disaster_sis_decay.1.a:0 "May god have mercy on us"
+ TD_SIS_Prince_Bonuses:0 "Decay in the Second Empire"
  
  disaster_sis_decay.2.t:0 "End of Internal Decay in the Second Empire"
  disaster_sis_decay.2.desc:0 " "
@@ -558,14 +559,16 @@
  SIS_DECAY_Every_subjects_gains_10_opinion_tt:0 "Every Subject will gain §G10 opinion of us, and we of them§!."
  SIS_DECAY_Every_subjects_gains_20_opinion_tt:0 "Every Subject will gain §G20 opinion of us, and we of them§!."
  SIS_DECAY_Every_subjects_gains_40_opinion_tt:0 "Every Subject will gain §G40 opinion of us, and we of them§!."
+ SIS_DECAY_Every_subjects_gains_50_opinion_tt:0 "Every Subject will gain §G50 opinion of us, and we of them§!."
  
  disaster_sis_decay.4.t:0 "Peasants Exploit another loophole"
  disaster_sis_decay.4.desc:0 " "
  disaster_sis_decay.4.a:0 "We have more important matters on hand right now."
  disaster_sis_decay.4.b:0 "We can't allow that! Kill them, or something!"
- disaster_sis_decay.5.t:0 "[TD_SIS_DECAY_Imperial_prince_who_doesnt_want_to_pay_taxes.GetName]'s ruler ask us if he could pay less taxes"
+ disaster_sis_decay.5.t:0 "Imperial Princes ask us if they could pay less taxes"
  disaster_sis_decay.5.desc:0 " "
  disaster_sis_decay.5.a:0 "We can allow it this time"
+ TD_SIS_Princes_dont_pay_taxes:0 "Reduced Imperial Taxation"
  disaster_sis_decay.5.b:0 "Nobody gets special treatment"
  disaster_sis_decay.6.t:0 "Nobility opposes unpopular reforms"
  disaster_sis_decay.6.desc:0 " "
@@ -603,9 +606,13 @@
  #SIS_DECAY_Get_Imperial_Reform_effects_tt:0 "§GEvery Purple-coloured reforms will grant us permanent bonuses equivalent to that of Imperial Reform they are named after.§!"
  SIS_DECAY_overall_reforms_counter:0 "Number of Major Reforms in the Second Empire"
  
+ disaster_sis_decay.14_17.back:0 "On the second thought, i think we need to reform something else first."
+ TD_SIS_Reform_Cooldown:0 "Reform Cooldown"
+ SIS_DECAY_Has_not_reform_cooldown_tt:0 "Hasn't Passed a reform in last four months"
+ 
  disaster_sis_decay.14.t:0 "Reforming Imperial Diplomcy"
  disaster_sis_decay.14.desc:0 " "
- disaster_sis_decay.14.a:0 "§PExpand the Legatorum§!"
+ disaster_sis_decay.14.a:0 "Expand the Legatorum"
  TD_SIS_Expand_The_Legatorum:0 "Expanded the Legatorum"
  TD_SIS_Expand_The_Legatorum_subjects:0 "Expanded the Legatorum"
  disaster_sis_decay.14.b:0 "Remove Obsolete Functions"
@@ -623,7 +630,7 @@
  disaster_sis_decay.15.b:0 "Establish new Mint"
  TD_SIS_Mint_with_Gold:0 "Imperial Mint"
  TD_SIS_Mint_without_Gold:0 "Imperial Mint"
- disaster_sis_decay.15.c:0 "§PUnify the Infrastructure§!"
+ disaster_sis_decay.15.c:0 "Unify the Infrastructure"
  TD_SIS_Unified_Infrastructure:0 "Unified the Infrastructure"
  TD_SIS_Unlock_Via_Caroli_tt:0 "Unlocks "§PExpand Via Caroli§!" decision"
  TD_SIS_Unlock_Via_Magreini_tt:0 "Unlocks "§PExpand Via Magreini§!" decision"
@@ -639,7 +646,7 @@
  disaster_sis_decay.16.a:0 "Strip Nobility's Privileges"
  TD_SIS_Stripped_Nobilitys_Privileges:0 "Stripped Nobility's Privileges"
  disaster_sis_decay.16.b:0 "Keep Nobility's Privileges"
- TD_SIS_Keeped_Nobilitys_Privileges:0 "Keeped Nobility's Privileges"
+ TD_SIS_Keeped_Nobilitys_Privileges:0 "Kept Nobility's Privileges"
  disaster_sis_decay.16.c:0 "Increase Levies"
  TD_SIS_Increased_feudal_levies:0 "Increased Feudal Levies"
  disaster_sis_decay.16.d:0 "Keep Current Levies"
@@ -708,9 +715,9 @@
  disaster_sis_decay.22.a:0 "We should try to establish an perpetual diet"
  disaster_sis_decay.22.b:0 "We should replace diet with another institution"
  decision_sis_decay_question_of_diet_title:0 "Question of Imperial Diet"
- TD_SIS_Call_emergency_diet_tt:0 "§GImperial Diet will convene, and we will try to reform it while it is happening§!"
+ TD_SIS_Call_emergency_diet_tt:0 "§GWe shall decide the fate of Imperial Diet§!"
  TD_SIS_Decay_Unlock_Perpetual_diet_decision_tt:0 "Unlocks "§PEstablish Perpetual Diet§!" decision"
- decision_sis_decay_establish_perpetual_diet:0 "Establish Perpetual Diet"
+ decision_sis_decay_establish_perpetual_diet_title:0 "Establish Perpetual Diet"
  TD_SIS_Establish_Permanent_Diet:0 "Established Permanent Diet"
  TD_SIS_Decay_Unlock_Call_Imperial_diet_decision_tt:0 "Unlocks "§PHold Imperial Diet§!" decision"
  decision_hold_diet_sis_title:0 "Hold Imperial Diet"
@@ -755,6 +762,7 @@
  TD_SIS_refused_to_reestablish_imperial_diet_lighter:0 "Refused to Reestablish Imperial Diet"
  TD_SIS_Established_Saelian_Council_opinion_mod:0 "Established Saelian Council"
  TD_SIS_Established_mint_in_our_country:0 "Established Imperial Mint in our country"
+ TD_SIS_Expanded_Imperial_Infrastructure:0 "Expanded Imperial Infrastructure"
  
  TETRARCHY:0 "The Tetrarchy"
  TETRARCHY_ADJ:0 "Tetrarch"
