south taedium map changes

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -188,7 +188,7 @@
  PROV187:0 "Bosalva"
  PROV188:0 "Adonuepadre"
  PROV189:0 "Sierra Verde"
- PROV190:0 "Alanqisam alsughraa"
+ PROV190:0 "Gabalnak"
  PROV191:0 "Tarinum"
  PROV192:0 "Namruq"
  PROV193:0 "Zarashim"
@@ -575,7 +575,7 @@
  PROV574:0 "Bohmins"
  PROV575:0 "Okrajna"
  PROV576:0 "Rolasta"
- PROV577:0 "Jižní pevnost"
+ PROV577:0 "Jižní Pevnost"
  PROV578:0 "Velký les"
  PROV579:0 "Northern Panourgian Sea"
  PROV580:0 "Arodend"
@@ -2485,7 +2485,7 @@
  PROV2484:0 "Hiraca"
  PROV2485:0 "Awachi"
  PROV2486:0 "2486"
- PROV2487:0 "2487"
+ PROV2487:0 "Gabalnak"
  PROV2488:0 "Seeha"
  PROV2489:0 "Mayasuul"
  PROV2490:0 "Tlakan"
