sahila and pamkusea map changes

--- a/localisation/TD_01_Flavour_Rah_jadid_l_english.yml
+++ b/localisation/TD_01_Flavour_Rah_jadid_l_english.yml
@@ -103,7 +103,9 @@
  every_ehsani_province_tt:0 "Every Ehšani province will get:"
 
  ehsani_community:0 "Ehšani Community"
+ desc_ehsani_community:0 "A large group of an Uttarian sect live in this province."
  ehsani_community_protected:0 "Protected Ehšani Community"
+ desc_ehsani_community_protected:0 "A large group of an Uttarian sect live in this province and their cult is protected by law."
  
  ehsani_happened_tt:0 "Ehšan's Influence has greatly increased"
  
