--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -855,3 +855,11 @@
  haluda_phara_area:0 "Haluda Phara"
  jampyari_area:0 "Jampyari"
  putnala_area:0 "Putnala"
+
+ mahjipang_area:0 "Mahjipang"
+ hntaigu_area:0 "Hntaigu"
+ hnyunbi_area:0 "Hnyunbi"
+ dawbiav_area:0 "Dawbiav"
+ xabliaj_area:0 "Xabliaj"
+ pemubtus_area:0 "Pemubtus"
+ thajan_area:0 "Thajan"
