--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2173,7 +2173,7 @@
  PROV2172:0 "Mäkrwah"
  PROV2173:0 "Butkhuaran"
  PROV2174:0 "Ÿaçagyl"
- PROV2175:0 "2175"
+ PROV2175:0 "Qanisomo"
  PROV2176:0 "Khoibom"
  PROV2177:0 "Ÿaçagyl"
  PROV2178:0 "Vitasla"
@@ -2193,21 +2193,21 @@
  PROV2192:0 "Khavrytol"
  PROV2193:0 "2193"
  PROV2194:0 "2194"
- PROV2195:0 "2195"
+ PROV2195:0 "Joseqan"
  PROV2196:0 "Shinkhot"
  PROV2197:0 "Bayajutol"
  PROV2198:0 "2198"
- PROV2199:0 "2199"
- PROV2200:0 "2200"
+ PROV2199:0 "Sinmoro"
+ PROV2200:0 "Erbjo"
  PROV2201:0 "Panpallpan Coast"
- PROV2202:0 "2202"
+ PROV2202:0 "Ammal"
  PROV2203:0 "Lauran Gulf"
- PROV2204:0 "2204"
- PROV2205:0 "2205"
- PROV2206:0 "2206"
+ PROV2204:0 "Ikino"
+ PROV2205:0 "Senjile"
+ PROV2206:0 "Serila"
  PROV2207:0 "2207"
  PROV2208:0 "2208"
- PROV2209:0 "2209"
+ PROV2209:0 "Naneg"
  PROV2210:0 "2210"
  PROV2211:0 "Dakhalbum"
  PROV2212:0 "Lake Harold"
@@ -2551,7 +2551,7 @@
  PROV2550:0 "Sha'ia"
  PROV2551:0 "Tiyahkikwa"
  PROV2552:0 "2552"
- PROV2553:0 "2553"
+ PROV2553:0 "Tangkan Bay"
  PROV2554:0 "2554"
  PROV2555:0 "2555"
  PROV2556:0 "2556"
@@ -2578,7 +2578,7 @@
  PROV2577:0 "2577"
  PROV2578:0 "2578"
  PROV2579:0 "2579"
- PROV2580:0 "2580"
+ PROV2580:0 "Haenam Gulf"
  PROV2581:0 "2581"
  PROV2582:0 "2582"
  PROV2583:0 "2583"
@@ -3148,7 +3148,7 @@
  PROV3147:0 "3147"
  PROV3148:0 "3148"
  PROV3149:0 "Ginisalk"
- PROV3150:0 "3150"
+ PROV3150:0 "Enkude"
  PROV3151:0 "3151"
  PROV3152:0 "3152"
  PROV3153:0 "Tsenkhargin"
