A bit of Disaster Tweaks
It shouldn't be impossible anymore.

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -1,4 +1,7 @@
 ﻿l_english:
+ 
+ ALLOW_MERCENARY_RECRUITMENT_TT:0 "§GWe will be able to recruit Mercenaries Again.§!"
+ DISALLOW_MERCENARY_RECRUITMENT_TT:0 "§RWe will not be able to recruit Mercenaries anymore.§!"
 
  TD_piety_supremacy_of_synod:0 "Supremacy of the Synod"
  desc_TD_piety_supremacy_of_synod:0 "Synods are encouraged and supported by the state."
@@ -688,6 +691,7 @@
  decision_sis_decay_reforms_mercenaries_title:0 "The question of Mercenaries in the Empire"
  SIS_DECAY_has_not_finished_Mercenary_Reforms:0 "Has not finished ascertaining the Mercenary question"
  SIS_DECAY_We_will_reform_the_mercenaries_tt:0 "§GWe will get mercenaries under control.§!"
+ TD_SIS_Finishing_Merc_Reforms_Will_Give_Back_Merc_Recruitment_tt:0 "§YFinishing all mercenary questions will allow us to recruit Mercenaries again.§!"
  
  disaster_sis_decay.18.t:0 "People stop using Imperial Coin"
  disaster_sis_decay.18.desc:0 "
