--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -137,6 +137,7 @@
  inner_ghrub_islands_area:0 "Inner Ghrub Islands"
  outer_ghrub_islands_area:0 "Outer Ghrub Islands"
  ocean_islands_area:0 "Niheyan Islands"
+ qaran_area:0 "Qaran"
 
  villit_vuoret_area:0 "Villit Vuoret"
  veljien_metsa_area:0 "Veljien Metsa"
