--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -31,6 +31,7 @@
  revorian:0 "Revorian"
  tolenian:0 "Tolenian"
  faburian:0 "Fiburian"
+ harban:0 "Harban"
  vinalien_camaria:0 "Vinalien"
 
  acerba_group:0 "Acerba"
