--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1280,3 +1280,18 @@
  BAH_ADJ:0 "Bahramodšahri"
  BAA:0 "Bahran"
  BAA_ADJ:0 "Bahrian"
+
+ BHE:0 "Bohedip"
+ BHE_ADJ:0 "Bohedipian"
+ DOA:0 "Doablau"
+ DOA_ADJ:0 "Doablaui"
+ HRA:0 "Hrakew"
+ HRA_ADJ:0 "Hrakewi"
+ JHI:0 "Jhikmatai"
+ JHI_ADJ:0 "Jhikmataian"
+ MRI:0 "Mriahtuk"
+ MRI_ADJ:0 "Mriahtuki"
+ PHT:0 "Phitrut"
+ PHT_ADJ:0 "Phitruti"
+ SAP:0 "Sapaith"
+ SAP_ADJ:0 "Sapaithi"
