--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1295,3 +1295,15 @@
  PHT_ADJ:0 "Phitruti"
  SAP:0 "Sapaith"
  SAP_ADJ:0 "Sapaithi"
+ CHT:0 "Chaktai"
+ CHT_ADJ:0 "Chaktaian"
+ HEU:0 "Heukha"
+ HEU_ADJ:0 "Heukhian"
+ KAH:0 "Kathin"
+ KAH_ADJ:0 "Kathini"
+ PAH:0 "Pahenu"
+ PAH_ADJ:0 "Paheni"
+ SEH:0 "Sehhab"
+ SEH_ADJ:0 "Sehhabi"
+ SMI:0 "Samai"
+ SMI_ADJ:0 "Samaian"
