--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -488,3 +488,8 @@
  bay:0 "Bay"
  nau:0 "Nâu"
  phong:0 "Phong"
+
+ misivid_group:0 "Misivid"
+ savpa:0 "Savpa"
+ aemnkhong:0 "Aemnkhong"
+ khedphu:0 "Khedphu"
