culture religion and area changes

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -124,7 +124,7 @@
  dhahabi_valley_area:0 "Dhahabi Valley"
  middle_dhahabi_area:0 "Middle Dhahabi"
  ifritica_area:0 "West Ifritica"
- east_ifritica_area:0 "Ifritica Proper"
+ east_ifritica_area:0 "Ifritiyash"
  bariya_area:0 "Bariya"
  west_harba_area:0 "West Harba"
  middle_harba_area:0 "Middle Harba"
