--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- west_yermic_group:0 "Yermic"
+ west_yermic_group:0 "West Yermic"
  arkabili:0 "Arkabili"
  west_aqerbic:0 "West Aqerbic"
  ifritican:0 "Ifritican"
@@ -122,7 +122,7 @@
  confinian_chilverchian:0 "Confinian"
  vinalien_chilverchian:0 "Vinalien"
 
- muzbahi_group:0 "Muzbahi"
+ muzbahi_group:0 "East Yermic"
  hafani:0 "Hafani"
  musatemaran:0 "Musatemaran"
  pusgivah:0 "Pusgivah"
