--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -120,9 +120,9 @@
  alvaria_area:0 "Alvaria"
  altaliqadim_area:0 "Altaliqadim"
  Yermontana_area:0 "Yermontana"
- Riyaduna_area:0 "Riyaduna"
- dhahabi_valley_area:0 "Dhahabi Valley"
- middle_dhahabi_area:0 "Middle Dhahabi"
+ ridagun_area:0 "Ridagun"
+ nasihatr_valley_area:0 "Nahrdant"
+ middle_nasihatr_area:0 "Middle Nasihatr"
  ifritica_area:0 "West Ifritica"
  east_ifritica_area:0 "Ifritiyash"
  bariya_area:0 "Bariya"
@@ -132,7 +132,7 @@
  dafda_area:0 "Dafda"
  east_cabira_area:0 "East Cabira"
  sadeqa_island_area:0 "Sadeqa"
- hamidari_bay_area:0 "Hamidari Bay"
+ hamidari_bay_area:0 "Malasfet"
  shamaliu_island_area:0 "Shamaliu"
  inner_ghrub_islands_area:0 "Inner Ghrub Islands"
  outer_ghrub_islands_area:0 "Outer Ghrub Islands"
