--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -5,7 +5,7 @@
  patromnis_estuary_modifier:0 "Patromnis Estuary"
  korpikoski_estuary_modifier:0 "Korpikoski Estuary"
  rinanakkain_estuary_modifier:0 "Rinanakkain Estuary" 
- dhahabi_estuary_modifier:0 "Alnahrdhabi Estuary" 
+ nasihatr_estuary_modifier:0 "Nasihatr Estuary" 
  paraconna_estuary_modifier:0 "Paraconna Estuary"
  runga_estuary_modifier:0 "Runga Estuary"
  kwadcoad_estuary_modifier:0 "Kwadcoad Estuary"
