--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -14,7 +14,7 @@
  chilverchia_tradenode:0 "Retonoe"
  diavasa_tradenode:0 "Diavasa"
  acerb_tradenode:0 "Alvaro"
- dhahabia_tradenode:0 "Dhahabia"
+ hazsihar_tradenode:0 "Hazsihar"
  hamidar_tradenode:0 "Hamidar"
  sedica_tradenode:0 "Sedica"
  western_camaria_tradenode:0 "Belenno"
