--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -204,7 +204,7 @@
  PROV203:0 "Alghamdhah"
  PROV204:0 "Alshawahid"
  PROV205:0 "Alzamzam"
- PROV206:0 "Nahralnoriya"
+ PROV206:0 "Hazsihar"
  PROV207:0 "Almutawiyah"
  PROV208:0 "Alsham"
  PROV209:0 "Liqalnahr"
