--- a/localisation/TD_trade_companies_l_english.yml
+++ b/localisation/TD_trade_companies_l_english.yml
@@ -17,9 +17,9 @@
  chilverchian_company:0 "Chilverchian Charter"
  TRADE_COMPANY_CHILVERCHIAN_Root_Culture_GetName:0 "[Root.Culture.GetName] Chiverchia Company"
  TRADE_COMPANY_CHILVERCHIAN_Trade_Company:0 "Chilverchian Trade Company"
- dhahabian_company:0 "Dhahabian Charter"
- TRADE_COMPANY_DHAHABI_Root_Culture_GetName:0 "[Root.Culture.GetName] Dhahabia Company"
- TRADE_COMPANY_DHAHABI_Trade_Company:0 "Dhahabian Trade Company"
+ hazsiharn_company:0 "Nahrdanti Charter"
+ TRADE_COMPANY_HAZSIHAR_Root_Culture_GetName:0 "[Root.Culture.GetName] Nahrdant Company"
+ TRADE_COMPANY_HAZSIHAR_Trade_Company:0 "Nahrdanti Trade Company"
  matliman_company:0 "Matlimani Charter"
  TRADE_COMPANY_MATLIMAN_Root_Culture_GetName:0 "[Root.Culture.GetName] Matliman Company"
  TRADE_COMPANY_MATLIMAN_Trade_Company:0 "Matlimani Trade Company"
