--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -118,14 +118,14 @@
  padosi_area:0 "Padosi"
  altawra_area:0 "Altawra"
  alvaria_area:0 "Alvaria"
- altaliqadim_area:0 "Altaliqadim"
+ altaharun_area:0 "Altaharun"
  Yermontana_area:0 "Yermontana"
  ridagun_area:0 "Ridagun"
  nasihatr_valley_area:0 "Nahrdant"
  middle_nasihatr_area:0 "Middle Nasihatr"
  ifritica_area:0 "West Ifritica"
  east_ifritica_area:0 "Ifritiyash"
- bariya_area:0 "Bariya"
+ gandar_area:0 "Gandar"
  west_harba_area:0 "West Harba"
  middle_harba_area:0 "Middle Harba"
  east_harba_area:0 "East Harba"
@@ -133,9 +133,9 @@
  east_cabira_area:0 "East Cabira"
  sadeqa_island_area:0 "Sadeqa"
  hamidari_bay_area:0 "Malasfet"
- shamaliu_island_area:0 "Shamaliu"
- inner_ghrub_islands_area:0 "Inner Ghrub Islands"
- outer_ghrub_islands_area:0 "Outer Ghrub Islands"
+ nedar_area:0 "Nedar"
+ kramdatr_area:0 "Kramdatr"
+ tashan_chain_area:0 "Tashan Chain"
  ocean_islands_area:0 "Niheyan Islands"
  qaran_area:0 "Qaran"
 
