--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1309,3 +1309,17 @@
  SMI_ADJ:0 "Samaian"
  NBA:0 "Naibaphu"
  NBA_ADJ:0 "Naibaphi"
+ CKA:0 "Chakang"
+ CKA_ADJ:0 "Chakangi"
+ NAP:0 "Napha"
+ NAP_ADJ:0 "Naphani"
+ PHE:0 "Pheuon"
+ PHE_ADJ:0 "Pheuon"
+ POK:0 "Pokhong"
+ POK_ADJ:0 "Pokhongi"
+ SAI:0 "Saitai"
+ SAI_ADJ:0 "Saitainese"
+ THC:0 "Thchao"
+ THC_ADJ:0 "Thchaonese"
+ VAO:0 "Vaoaming"
+ VAO_ADJ:0 "Vaoamingi"
