government + tributaries (don't work)

--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -141,3 +141,6 @@
 
  tikset_monarchy_reform:0 "Tikset Monarchy"
  tikset_monarchy_reform_desc:0 "Need for safe communication in Lunpilat Empire forced a lot of people to join our navy. Later a mandatory service on our ships was introduced, after the empire this law still remained in place. But now instead of recruiting everyone we weed out the mediocre candidates with the best of best being send to serve on our galleys"
+
+ kingdom_of_the_sun_reform:0 "Kingdom of the Sun"
+ kingdom_of_the_sun_reform_desc:0 "These lands are being protected by Lord of the Sun, this title isn't hereditary and can be usurped by any other lord that controls palace of the first lord. Because of this his power over his dominion isn't absolute and his subjects often descend into chaos."
